# nabu-keyboard-usb

./: CMakeLists.txt  LICENSE  README.md  nabu_keyboard_usb.c  nabu_usb_keyboard.c  tusb_config.h  usb_descriptors.c  usb_hid_keys.h
design-files/: nabu-keyboard-usb.kicad_pcb  nabu-keyboard-usb.kicad_prl  nabu-keyboard-usb.kicad_pro  nabu-keyboard-usb.kicad_sch  nabu-keyboard-usb.pro  nabu-keyboard-usb.sch  nabu-usb-keyboard-cache.lib  nabu-usb-keyboard.kicad_pcb  nabu-usb-keyboard.pro  nabu-usb-keyboard.sch
design-files/Gerbers/: nabu-keyboard-usb-B_Cu.gbr  nabu-keyboard-usb-B_Mask.gbr  nabu-keyboard-usb-B_SilkS.gbr  nabu-keyboard-usb-B_Silkscreen.gbr  nabu-keyboard-usb-Edge_Cuts.gbr  nabu-keyboard-usb-F_Cu.gbr  nabu-keyboard-usb-F_Mask.gbr  nabu-keyboard-usb-F_SilkS.gbr  nabu-keyboard-usb-F_Silkscreen.gbr  nabu-keyboard-usb-NPTH.drl  nabu-keyboard-usb-PTH.drl  nabu-keyboard-usb-job.gbrjob  nabu-usb-keyboard-B_Cu.gbr  nabu-usb-keyboard-B_Mask.gbr  nabu-usb-keyboard-B_SilkS.gbr  nabu-usb-keyboard-Edge_Cuts.gbr  nabu-usb-keyboard-F_Cu.gbr  nabu-usb-keyboard-F_Mask.gbr  nabu-usb-keyboard-F_SilkS.gbr  nabu-usb-keyboard-PTH.drl  nabu-usb-keyboard-job.gbrjob
uf2/: nabu_keyboard_usb.uf2
